Fixing the padding of images on small screens

--- a/style.css
+++ b/style.css
@@ -3012,6 +3012,11 @@ footer.entry-meta {
 		padding-right: 20px;
 	}
 
+	.format-image .entry-content {
+	padding-left: 0px !important;
+	padding-right: 0px !important;
+	}
+
 	.format-image .wp-caption p {
 	font-size: 2.0rem;
 	}
